--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Feedback Form</h1>
+	
+	<label for="name">Name</label>
+	<input type="text" id="name" minlength="3" maxlength="50" required>
+	
+	<label for="portfolio">Portfolio</label>
+	<input type="URL" id="portfolio" required>
+	
+	<label for="favColor">Favourite Color</label>
+	<input type="color" id="favColor">
+
+	<label for="likeness">Likeness</label>
+	<input type="range" id="likeness" min="1" max="100">
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
