--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Feedback Form</h1>
-	
+	<form method="POST">
 	<label for="name">Name</label>
 	<input type="text" id="name" minlength="3" maxlength="50" required>
 	
@@ -21,6 +21,7 @@
 
 	<label for="likeness">Likeness</label>
 	<input type="range" id="likeness" min="1" max="100">
+		</form>
 	
     <script type="text/javascript" src="./script.js">
 </script>
